2009-02-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpcoords-interpolate.c
	* app/display/gimpdisplayshell-coords.c: applied patch from Alexia
	Death that fixes issues with the new stroke direction code
	(bug #520078).

2009-02-14  Sven Neumann  <sven@gimp.org>

	Bug 472644 – Rotate with clipping crops the whole layer

	* app/core/gimp-transform-resize.c: applied patch as attached to
	bug #472644. Supposedly fixes the problem of the disappearing
	image.

2009-02-13  Sven Neumann  <sven@gimp.org>

	Bug 571628 – Scaling image to 25% turn background from white to grey

	* app/paint-funcs/scale-region.c (pixel_average2): fixed right-shift
	for GRAYA pixels.

2009-02-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable.c (gimp_drawable_sync_source_node): need
	to rip the floating selection's source node out of its layer's
	graph before using it in the floating selection sub-graph, and
	need to plug it back there when it's not a floating selection any
	longer.

	Unrelated:

	Also introduce a "fs_crop_node" that makes sure the floating
	selection stops at the drawable's boundaries.

	(gimp_drawable_visibility_changed): use item->node instead of
	gimp_item_get_node() because the latter creates the node on
	demand.

	* app/core/gimpdrawable-private.h: add fs_crop_node member.

2009-02-12  Michael Natterer  <mitch@gimp.org>

	* plug-ins/file-faxg3/Makefile.am
	* plug-ins/help/Makefile.am
	* plug-ins/metadata/Makefile.am: add $(libgimpconfig) to LDADD
	where it was missing. Libgimp pulls in libgimpconfig and these
	plug-ins were linking against the installed libgimpconfig under
	some #$&%*#%&%$& .la file circumstances.

2009-02-12  Michael Natterer  <mitch@gimp.org>

	Bug 567840 – GIMP's GtkScaleButton conflicts with GTK's

	* app/widgets/gtkscalebutton.c: rename the type to
	"GimpGtkScaleButton" so we don't crash if the real
	GtkScaleButton type is registered too.

2009-02-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpcoords-interpolate.c